# core-rust

./: Cargo.toml  Justfile
data/: start-yoyo  yoyo-session.target  yoyo.desktop
debian/: changelog  control  copyright  rules
src/: main.rs  process_manager.rs  service.rs  systemd.rs
